--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     password: ${db_password}
     username: ${db_username}
-    url: jdbc:mysql://localhost:3306/cupcakes_pakoAndMoni_spring_app?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/simona_manikiur_spring_react?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
   thymeleaf: # Thymeleaf
     cache: false
     mode: HTML
@@ -44,7 +44,7 @@ logging:
   pattern:
     level:
 server:
-  port: 8000
+  port: 8888
 
 servlet:
   multipart:
@@ -62,6 +62,10 @@ servlet:
       cache:
         period: 0
 
+
         server:
           tomcat:
             uri-encoding=UTF-8:
+google:
+  recaptcha:
+    secret= {secret_key_recaptcha}:
