--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 	testImplementation 'org.mockito:mockito-core:5.5.0'
 	// JUnit (ако използвате JUnit за тестовете)
 	testImplementation 'junit:junit:4.13.2'
+	implementation 'com.sun.mail:jakarta.mail:2.1.3'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
