--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -46,15 +46,32 @@ logging:
 server:
   port: 8888
 
-  mail:
-    host: smtp.gmail.com
-    port: 578
-    username: ${email_username}
-    password: ${password_email}
-    test-connection: true
-     smtp.auth=true
-     smtp.starttls.enable=true
+  spring:
+    mail:
+      host: smtp.gmail.com
+      port: 587
+      username: ${email_username}
+      password: ${password_email}
+      properties:
+        mail:
+          smtp:
+            auth: true
+            starttls.enable: true
+      test-connection: true
 
+
+#  mail:
+#    com:
+#      sun:
+#        mail:jakarta:
+#          mail:
+#    host: smtp.gmail.com
+#    port: 578
+#    username: ${email_username}
+#    password: ${password_email}
+#    test-connection: true
+#     smtp.auth=true
+#     smtp.starttls.enable=true
 
 servlet:
   multipart:
